--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@
 
 @font-face {
   font-family: "Trap-Black";
-  src: url("/src/assets/Font/Trap-Black.otf") format("opentype");
+  src: url("/src/assets/Font/Trap-Black.tff") format("opentype");
 }
