--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,11 @@
 
 @font-face {
   font-family: "Trap-Black";
-  src: url("/src/assets/Font/Trap-Black.otf") format("opentype"), url("/src/assets/Font/Trap-Black.woff") format("woff"), url("/src/assets/Font/Trap-Black.woff2") format("woff2"), url("/src/assets/Font/Trap-Black.ttf") format("truetype");
+  src: url("/src/assets/Font/Trap-Black.woff2") format("woff2"), url("/src/assets/Font/Trap-Black.woff") format("woff"), url("/src/assets/Font/Trap-Black.ttf") format("truetype"), url("/src/assets/Font/Trap-Black.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: "Trap-Black";
 }
